--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -133,7 +133,7 @@
   "license": "SEE LICENSE IN ../LICENSE",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wundam/truxe.git",
+    "url": "https://github.com/truxeio/truxe.git",
     "directory": "api"
   },
   "eslintConfig": {
