--- a/database/package.json
+++ b/database/package.json
@@ -58,7 +58,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wundam/truxe.git",
+    "url": "https://github.com/truxeio/truxe.git",
     "directory": "database"
   },
   "jest": {
