feat(deploy): Use GHCR image for API deployment
- Changed from local build to ghcr.io/wundam/truxe:latest
- Added pull_policy: always for automatic updates
- Enables zero-downtime deployments with docker-compose pull

--- a/deployment/docker-compose.production.yml
+++ b/deployment/docker-compose.production.yml
@@ -42,11 +42,10 @@ services:
 
   # Truxe API
   api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: ghcr.io/wundam/truxe:latest
     container_name: truxe-api
     restart: unless-stopped
+    pull_policy: always
     environment:
       NODE_ENV: production
       PORT: 3001
