--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -37,8 +37,8 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
+          base: ${{ github.event.before }}
+          head: ${{ github.event.after }}
           extra_args: --only-verified
 
   codeql:
